--- a/simple.html
+++ b/simple.html
@@ -1,4 +1,11 @@
 <!DOCTYPE html>
+<!--
+
+
+	this is a copyright notice
+
+
+-->
 <head>
 	<title>An Example Website</title>
 	<link rel="stylesheet" href="css/bootstrap.min.css">
